Updated both notebooks with comments on Quintile or Decile cells.

--- a/Strat-Report-Notebook.ipynb
+++ b/Strat-Report-Notebook.ipynb
@@ -189,7 +189,15 @@
    "id": "8281a3cb",
    "metadata": {},
    "source": [
-    "# Display Correlations"
+    "# Display Correlations\n",
+    "\n",
+    "Display Correlations of returns data by:\n",
+    "* **frequency (Monthly or Weekly)** - Show correlations of Monthly or Weekly returns\n",
+    "* **corr** - Show:\n",
+    "    * **corr** - full history correaltions\n",
+    "    * **corr_down** - risk seeking benchmark downside returns correlations or \n",
+    "    * **corr_up** - risk seeking benchmark upside returns correlations\n",
+    "* **plot_type (corrplot or heatmap)** - Show a map with magnitude or just heatmap"
    ]
   },
   {
@@ -254,7 +262,9 @@
    "id": "264776df",
    "metadata": {},
    "source": [
-    "## Compute Quantile Analysis"
+    "## Compute Quintile or Decile Analysis\n",
+    "Display grouped data by:\n",
+    "* **group (Quintile or Decile)** - Show returns data in quintiles or deciles"
    ]
   },
   {
@@ -276,9 +286,10 @@
    "id": "ba229c19",
    "metadata": {},
    "source": [
-    "## Display Quantile Analysis\n",
+    "## Display Quintile or Decile Analysis\n",
     "Display Quintile Analysis Bar Chart:\n",
-    "* Compare strategies to the Equity Benchmark's returns"
+    "* **group (Quintile or Decile)** - Show returns data in quintiles or deciles\n",
+    "* **strat** - Show quintile or decile for selected strategy"
    ]
   },
   {
@@ -312,7 +323,13 @@
    "id": "49402843",
    "metadata": {},
    "source": [
-    "# Create Report"
+    "# Create Report\n",
+    "\n",
+    "Run this code below to export analysis into excel spreadsheet\n",
+    "* **strat_report (string)**: provide a name for the excel file\n",
+    "* **selloffs (boolean)**:\n",
+    "    * **True**: if you want historical selloff data in the spreadsheet\n",
+    "    * **False**: if you do not want historical selloff data in the spreadsheet"
    ]
   },
   {
