--- a/Equity-Hedge-Notebook.ipynb
+++ b/Equity-Hedge-Notebook.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,26 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "640c1f8655a542f6a268affad15dc9d8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='frequency', options=('Daily', 'Weekly', 'Monthly', 'Quarterly', 'Y…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "freq_list = ['Daily', 'Weekly', 'Monthly','Quarterly', 'Yearly']\n",
     "@interact\n",
@@ -135,72 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "notional value (Billions) for SPTR: 19\n",
-      "notional value (Billions) for Down Var: 1\n",
-      "notional value (Billions) for VOLA: 1\n",
-      "notional value (Billions) for Dynamic Put Spread: 1\n",
-      "notional value (Billions) for VRR: 1\n",
-      "notional value (Billions) for GW Dispersion: 1\n",
-      "notional value (Billions) for Corr Hedge: .25\n",
-      "notional value (Billions) for Def Var: 1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_45f63_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >SPTR</th>        <th class=\"col_heading level0 col1\" >Down Var</th>        <th class=\"col_heading level0 col2\" >VOLA</th>        <th class=\"col_heading level0 col3\" >Dynamic Put Spread</th>        <th class=\"col_heading level0 col4\" >VRR</th>        <th class=\"col_heading level0 col5\" >GW Dispersion</th>        <th class=\"col_heading level0 col6\" >Corr Hedge</th>        <th class=\"col_heading level0 col7\" >Def Var</th>    </tr></thead><tbody>\n",
-       "                <tr>\n",
-       "                        <th id=\"T_45f63_level0_row0\" class=\"row_heading level0 row0\" >Notional Weights (Billions)</th>\n",
-       "                        <td id=\"T_45f63_row0_col0\" class=\"data row0 col0\" >$19.00</td>\n",
-       "                        <td id=\"T_45f63_row0_col1\" class=\"data row0 col1\" >$1.00</td>\n",
-       "                        <td id=\"T_45f63_row0_col2\" class=\"data row0 col2\" >$1.00</td>\n",
-       "                        <td id=\"T_45f63_row0_col3\" class=\"data row0 col3\" >$1.00</td>\n",
-       "                        <td id=\"T_45f63_row0_col4\" class=\"data row0 col4\" >$1.00</td>\n",
-       "                        <td id=\"T_45f63_row0_col5\" class=\"data row0 col5\" >$1.00</td>\n",
-       "                        <td id=\"T_45f63_row0_col6\" class=\"data row0 col6\" >$0.25</td>\n",
-       "                        <td id=\"T_45f63_row0_col7\" class=\"data row0 col7\" >$1.00</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_45f63_level0_row1\" class=\"row_heading level0 row1\" >Percentage Weights</th>\n",
-       "                        <td id=\"T_45f63_row1_col0\" class=\"data row1 col0\" >100.00%</td>\n",
-       "                        <td id=\"T_45f63_row1_col1\" class=\"data row1 col1\" >5.26%</td>\n",
-       "                        <td id=\"T_45f63_row1_col2\" class=\"data row1 col2\" >5.26%</td>\n",
-       "                        <td id=\"T_45f63_row1_col3\" class=\"data row1 col3\" >5.26%</td>\n",
-       "                        <td id=\"T_45f63_row1_col4\" class=\"data row1 col4\" >5.26%</td>\n",
-       "                        <td id=\"T_45f63_row1_col5\" class=\"data row1 col5\" >5.26%</td>\n",
-       "                        <td id=\"T_45f63_row1_col6\" class=\"data row1 col6\" >1.32%</td>\n",
-       "                        <td id=\"T_45f63_row1_col7\" class=\"data row1 col7\" >5.26%</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_45f63_level0_row2\" class=\"row_heading level0 row2\" >Strategy Weights</th>\n",
-       "                        <td id=\"T_45f63_row2_col0\" class=\"data row2 col0\" >0.00%</td>\n",
-       "                        <td id=\"T_45f63_row2_col1\" class=\"data row2 col1\" >16.00%</td>\n",
-       "                        <td id=\"T_45f63_row2_col2\" class=\"data row2 col2\" >16.00%</td>\n",
-       "                        <td id=\"T_45f63_row2_col3\" class=\"data row2 col3\" >16.00%</td>\n",
-       "                        <td id=\"T_45f63_row2_col4\" class=\"data row2 col4\" >16.00%</td>\n",
-       "                        <td id=\"T_45f63_row2_col5\" class=\"data row2 col5\" >16.00%</td>\n",
-       "                        <td id=\"T_45f63_row2_col6\" class=\"data row2 col6\" >4.00%</td>\n",
-       "                        <td id=\"T_45f63_row2_col7\" class=\"data row2 col7\" >16.00%</td>\n",
-       "            </tr>\n",
-       "    </tbody></table>"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1f10ea31820>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#get notional weights\n",
     "notional_weights = dm.get_notional_weights(returns['Monthly'])\n",
@@ -217,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,24 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af764d24eeee498083ebc6e84d39f715",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='frequency', options=('Daily', 'Weekly', 'Monthly'), value='Daily')…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "@interact\n",
     "def display_correlations(frequency=corr_freq_list, weighted=weighted,\n",
@@ -282,29 +189,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "analytics_freq_list = ['Weekly', 'Monthly']\n",
     "analytics_dict = summary.get_analytics_data(returns,analytics_freq_list,weighted,notional_weights,include_fi,new_strat)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "analytics_dict['Weekly']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -322,26 +213,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01f7af6081544b589388e76647bbfe09",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='frequency', options=('Weekly', 'Monthly'), value='Weekly'), Dropdo…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "@interact\n",
     "def display_analytics(frequency=analytics_freq_list, weighted=weighted, stats=['return_stats', 'hedge_metrics']):\n",
@@ -398,7 +274,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compute Quintile Analysis"
+    "## Compute Quintile or Decile Analysis\n",
+    "Display grouped data by:\n",
+    "* **group (Quintile or Decile)** - Show returns data in quintiles or deciles"
    ]
   },
   {
@@ -407,18 +285,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quintile_df = summary.get_quintile_data(returns, notional_weights,weighted=True)\n",
-    "quintile_df.style.format(\"{:.2%}\")"
+    "group_list=['Quintile','Decile']\n",
+    "@interact\n",
+    "def display_returns(group = group_list):\n",
+    "    quintile_df = summary.get_grouped_data(returns, group = group)\n",
+    "    return(quintile_df.style.format(\"{:.2%}\"))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Display Quintile Analysis\n",
-    "\n",
+    "## Display Quintile or Decile Analysis\n",
     "Display Quintile Analysis Bar Chart:\n",
-    "* Compare hedging strategies (Weighted Hedges as well) to the Equity Benchmark's returns"
+    "* **group (Quintile or Decile)** - Show returns data in quintiles or deciles\n",
+    "* **strat** - Show quintile or decile for selected strategy"
    ]
   },
   {
@@ -427,13 +308,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "group_list=['Quintile','Decile']\n",
     "@interact\n",
-    "def display_quintile_analysis(strat=list(quintile_df.select_dtypes('float').columns)[1:]):\n",
-    "    df = quintile_df.copy()\n",
+    "\n",
+    "def display_quintile_analysis(group = group_list, strat=list(returns['Monthly'].select_dtypes('float').columns)[1:]):    \n",
+    "    df = summary.get_grouped_data(returns, group = group)\n",
+    "    \n",
     "    for col in df.columns:\n",
     "        if not (col == equity_bmk or col ==strat):\n",
     "            df.drop([col], axis=1, inplace=True)\n",
-    "    fig = px.bar(df,barmode='group',title =  \"Quintile Analysis\")\n",
+    "    if group == \"Quintile\":\n",
+    "        title ='Quintile Analysis'\n",
+    "    else:\n",
+    "        title = 'Decile Analysis'\n",
+    "        \n",
+    "    fig = px.bar(df,barmode='group',title = title)\n",
     "    fig.show()"
    ]
   },
