Squashed commit of the following:
commit e0de5440d5cf70cfeae1eea719ced0bb1c4043ac
Author: Maddie C <mchoi@ups.com>
Date:   Fri Jul 9 09:19:10 2021 -0400

    Updated both notebooks with comments on Quintile or Decile cells.

commit 66f26c329aba86063586fd22168f42855d175b59
Author: Maddie C <mchoi@ups.com>
Date:   Thu Jul 8 21:06:18 2021 -0400

    Fixed bug when calculating decile in notebook.

commit 7fceb5b44f5bf259ae2c44527a5104d64b6f70db
Author: Maddie C <mchoi@ups.com>
Date:   Thu Jul 8 17:03:11 2021 -0400

    Get rid of repeating code blocks

commit 0c4aa225727afd11541e76ca8d76d45c92353560
Author: Maddie C <mchoi@ups.com>
Date:   Thu Jul 8 16:57:50 2021 -0400

    'Clean up comments and repeated functions'

commit a13cc91b5f2a571bfeb75eadc572b5d55a2379cb
Merge: 4319af5 fbd0d71
Author: Maddie C <mchoi@ups.com>
Date:   Thu Jul 8 16:51:35 2021 -0400

    Merge branch 'interns' of https://github.com/pforjoeUPS/RMP into interns

commit 4319af5b47ea3ce659dae14fe8816fc21d19e3af
Author: Maddie C <mchoi@ups.com>
Date:   Thu Jul 8 16:27:04 2021 -0400

    Updated get_quintile_data function to now compute decile

commit fbd0d7184623b4346c99549e72c4c13eb8440f34
Author: zach-wells <87029878+zach-wells@users.noreply.github.com>
Date:   Thu Jul 8 10:59:29 2021 -0400

    Update Strat-Report-Notebook.ipynb

commit f48af4b61204f6f47b9d455947af848900ec5443
Merge: 8cca2a7 00db505
Author: zach-wells <87029878+zach-wells@users.noreply.github.com>
Date:   Wed Jul 7 14:42:44 2021 -0400

    Merge branch 'interns' of https://github.com/pforjoeUPS/RMP into interns

commit 8cca2a719296d644f92b5cda303097fb38821096
Author: zach-wells <87029878+zach-wells@users.noreply.github.com>
Date:   Wed Jul 7 12:23:47 2021 -0400

    'Created Strat Report Notebook to include corr'

commit 00db50548476a121394c266ec995b33c3384e4c9
Author: mchoii <maddiechoi839@gmail.com>
Date:   Wed Jul 7 12:18:50 2021 -0400

    Created Strat-Report-Notebook to include hedging metrics, return stats, historical sell o

--- a/Equity-Hedge-Notebook.ipynb
+++ b/Equity-Hedge-Notebook.ipynb
@@ -108,13 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "strategy_name = 'Def Var'\n",
-    "filename = 'def_var_data.xlsx'\n",
-    "sheet_name = 'Daily Returns'\n",
-    "new_strategy = dm.get_new_strategy_returns_data(filename, sheet_name, strategy_name)\n",
-    "new_strategy_dict = dm.get_data_dict(new_strategy, data_type='returns')\n",
-    "returns = dm.merge_dicts(returns, new_strategy_dict)\n",
-    "new_strat = True"
+    "git "
    ]
   },
   {
@@ -140,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compute Correlations"
+    "# Compute Correlations"
    ]
   },
   {
@@ -221,7 +215,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -280,7 +274,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compute Quintile Analysis"
+    "## Compute Quintile or Decile Analysis\n",
+    "Display grouped data by:\n",
+    "* **group (Quintile or Decile)** - Show returns data in quintiles or deciles"
    ]
   },
   {
@@ -289,18 +285,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quintile_df = summary.get_quintile_data(returns, notional_weights,weighted=True)\n",
-    "quintile_df.style.format(\"{:.2%}\")"
+    "group_list=['Quintile','Decile']\n",
+    "@interact\n",
+    "def display_returns(group = group_list):\n",
+    "    quintile_df = summary.get_grouped_data(returns, group = group)\n",
+    "    return(quintile_df.style.format(\"{:.2%}\"))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Display Quintile Analysis\n",
-    "\n",
+    "## Display Quintile or Decile Analysis\n",
     "Display Quintile Analysis Bar Chart:\n",
-    "* Compare hedging strategies (Weighted Hedges as well) to the Equity Benchmark's returns"
+    "* **group (Quintile or Decile)** - Show returns data in quintiles or deciles\n",
+    "* **strat** - Show quintile or decile for selected strategy"
    ]
   },
   {
@@ -309,13 +308,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "group_list=['Quintile','Decile']\n",
     "@interact\n",
-    "def display_quintile_analysis(strat=list(quintile_df.select_dtypes('float').columns)[1:]):\n",
-    "    df = quintile_df.copy()\n",
+    "\n",
+    "def display_quintile_analysis(group = group_list, strat=list(returns['Monthly'].select_dtypes('float').columns)[1:]):    \n",
+    "    df = summary.get_grouped_data(returns, group = group)\n",
+    "    \n",
     "    for col in df.columns:\n",
     "        if not (col == equity_bmk or col ==strat):\n",
     "            df.drop([col], axis=1, inplace=True)\n",
-    "    fig = px.bar(df,barmode='group',title =  \"Quintile Analysis\")\n",
+    "    if group == \"Quintile\":\n",
+    "        title ='Quintile Analysis'\n",
+    "    else:\n",
+    "        title = 'Decile Analysis'\n",
+    "        \n",
+    "    fig = px.bar(df,barmode='group',title = title)\n",
     "    fig.show()"
    ]
   },
@@ -386,6 +393,13 @@
     "selloffs = True\n",
     "rp.get_equity_hedge_report(equity_hedge_report, returns, notional_weights, include_fi, new_strat, weighted[0], selloffs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -404,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
