--- a/Equity-Hedge-Notebook.ipynb
+++ b/Equity-Hedge-Notebook.ipynb
@@ -98,7 +98,12 @@
     "## Add new strategy\n",
     "\n",
     "**Run this code if you want to add a new strategy**\n",
-    "* Import the daily index/returns\n",
+    "* Import the daily index/returns:\n",
+    "    * Specify:\n",
+    "        * strategy_list: list of strategies \n",
+    "        * filename: name of excel file\n",
+    "        * sheet_name: sheet name\n",
+    "        * data_type: index or returns data\n",
     "* add it to the Equity hedge returns data"
    ]
   },
@@ -108,7 +113,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git "
+    "strategy_list = []\n",
+    "filename = \n",
+    "sheet_name = \n",
+    "data_type = 'index'\n",
+    "new_strategy = dm.get_new_strategy_returns_data(filename, sheet_name, strategy_list)\n",
+    "new_strategy_dict = dm.get_data_dict(new_strategy, data_type)\n",
+    "returns = dm.merge_dicts(returns_ups, new_strategy_dict)\n",
+    "new_strat=True"
    ]
   },
   {
@@ -418,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
