--- a/normalizing_data.ipynb
+++ b/normalizing_data.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7b9e91e1",
    "metadata": {},
    "source": [
     "# Ranking Strategies Notebook\n",
@@ -11,7 +10,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04367e52",
    "metadata": {},
    "source": [
     "## Import Libraries"
@@ -20,7 +18,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a2b6a64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +37,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8599f464",
    "metadata": {},
    "source": [
     "## Import returns data\n",
@@ -58,7 +54,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e390e6c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,12 +62,12 @@
     "weighted = [True, False]\n",
     "strat_drop_list = ['99%/90% Put Spread', 'Vortex']\n",
     "new_strat = True\n",
-    "returns = dm.get_equity_hedge_returns(equity_bmk, include_fi, strat_drop_list)"
+    "returns = dm.get_equity_hedge_returns(equity_bmk, include_fi, strat_drop_list)\n",
+    "weekly_ret=returns['Weekly'].copy()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "54db002f",
    "metadata": {},
    "source": [
     "##  Get Notional Weights "
@@ -81,7 +76,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1e11590",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +87,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5feabd8e",
    "metadata": {},
    "source": [
     "## Get Hedge Metrics and Normalized Hedge Metrics"
@@ -102,18 +95,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6a01034",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = summary.get_normalized_hedge_metrics(returns, equity_bmk, notional_weights, weighted_hedge = True)\n",
+    "data = summary.get_normalized_hedge_metrics(weekly_ret, equity_bmk, notional_weights, weighted_hedge = True)\n",
     "df_norm = data['Normalized Data']\n",
     "df_hm = data['Hedge Metrics']"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "09465811",
    "metadata": {},
    "source": [
     "\n",
@@ -125,7 +116,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fb27db7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +129,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c136fc3",
    "metadata": {},
    "source": [
     "## Assign Each Strategy a Symbol"
@@ -148,7 +137,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ab80ca1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +146,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de58bfc1",
    "metadata": {},
    "source": [
     "## Display Ranked Strategies vs Normalized Data"
@@ -167,7 +154,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6116c7f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +184,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9450922a",
    "metadata": {
     "scrolled": true
    },
@@ -211,7 +196,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d484d5e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -233,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
