--- a/Equity-Hedge-Notebook.ipynb
+++ b/Equity-Hedge-Notebook.ipynb
@@ -362,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Display Annual Dollar Returns"
+    "# Display Annual Dollar Returns"
    ]
   },
   {
@@ -430,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
