--- a/normalizing_data.ipynb
+++ b/normalizing_data.ipynb
@@ -27,11 +27,9 @@
     "from ipywidgets import interact, interact_manual\n",
     "from EquityHedging.datamanager import data_manager as dm\n",
     "from EquityHedging.analytics import  util\n",
-    "from EquityHedging.analytics.util import get_df_weights\n",
     "from EquityHedging.analytics import summary \n",
     "from EquityHedging.reporting.excel import reports as rp\n",
     "from EquityHedging.reporting import formatter as fmt, plots\n",
-    "from EquityHedging.reporting import formatter as fmt\n",
     "from EquityHedging.analytics import hedge_metrics as hm\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
@@ -52,7 +50,7 @@
     "* Decide if you want a Fixed Income Benchmark (**include_fi**) - True, False\n",
     "* Select what equity hedging strategies to exclude (**strat_drop_list**). Below is the list of strategies:\n",
     "\n",
-    "    * 99%/90% Put Spread, Down Var, Vortex, VOLA , Dynamic Put Spread, VRR, GW Dispersion, Corr Hedge"
+    "    * 99%/90% Put Spread, Down Var, Vortex, VOLA , Dynamic Put Spread, VRR, GW Dispersion, Corr Hedge, Def Var"
    ]
   },
   {
@@ -62,12 +60,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "equity_bmk = 'M1WD'\n",
-    "include_fi = False\n",
+    "equity_bmk = 'SPTR'\n",
     "weighted = [True, False]\n",
     "strat_drop_list = ['99%/90% Put Spread', 'Vortex']\n",
-    "new_strat = True\n",
-    "returns = dm.get_equity_hedge_returns(equity_bmk, include_fi, strat_drop_list)\n",
+    "returns = dm.get_equity_hedge_returns(equity_bmk, strat_drop_list = strat_drop_list)\n",
     "weekly_ret=returns['Weekly'].copy()"
    ]
   },
@@ -88,7 +84,7 @@
    "source": [
     "#notional_weights = dm.get_notional_weights(returns['Monthly'])\n",
     "notional_weights = [19.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.25, 1.0]\n",
-    "df_weights = get_df_weights(notional_weights, list(returns['Monthly'].columns), include_fi)\n",
+    "df_weights = util.get_df_weights(notional_weights, list(returns['Weekly'].columns))\n",
     "fmt.get_notional_styler(df_weights)"
    ]
   },
@@ -107,9 +103,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = summary.get_normalized_hedge_metrics(weekly_ret, equity_bmk, notional_weights, weighted_hedge = True)\n",
+    "data = summary.get_normalized_hedge_metrics(weekly_ret, equity_bmk=True, notional_weights = notional_weights, weighted = True)\n",
     "df_norm = data['Normalized Data']\n",
-    "df_hm = data['Hedge Metrics']"
+    "df_normal = df_norm.transpose()"
    ]
   },
   {
@@ -133,28 +129,9 @@
     "@interact\n",
     "def display_hedge_metrics_or_normal( stats = ['Hedge Metrics','Normalized Data']):\n",
     "    if stats == 'Hedge Metrics':\n",
-    "        return fmt.format_hm_to_normalize(df_hm)    \n",
-    "    if stats == 'Normalized Data':\n",
-    "        return fmt.format_normalized_data(df_norm)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c4a82128",
-   "metadata": {},
-   "source": [
-    "## Assign Each Strategy a Symbol"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "019376c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_normal = df_norm.transpose()\n",
-    "symbols = plots.get_symbols(df_normal, weighted_hedge = True)\n"
+    "        return fmt.format_hm_to_normalize(data[stats])    \n",
+    "    else:\n",
+    "        return fmt.format_normalized_data(data[stats])\n"
    ]
   },
   {
@@ -172,7 +149,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#transpose normal data here instead of in method\n",
+    "#assign each strategy a symbol\n",
+    "symbols = plots.get_symbols(df_normal, unique=True)\n",
+    "color = plots.get_colors(df_normal, grey=False)\n",
+    "\n",
     "index = list(df_normal.index)\n",
     "fig = go.Figure()\n",
     "#loops through eaach column and plots each metric for the given strategy\n",
@@ -180,7 +160,7 @@
     "    fig.add_trace(go.Scatter(\n",
     "        x=index,\n",
     "        y=df_normal[col],\n",
-    "        marker=dict(size = 20),\n",
+    "        marker=dict(size = 20, color = color[col]),\n",
     "        marker_symbol = symbols[col],\n",
     "        mode= \"markers\",\n",
     "        name=col\n",
@@ -191,8 +171,6 @@
     "                  plot_bgcolor='White')\n",
     "fig.update_xaxes(showline=True, linewidth=2, linecolor='black', mirror=False)\n",
     "fig.update_yaxes(showline=True, linewidth=2, linecolor='black', mirror=False)\n",
-    "#fig.update_xaxes(showgrid=True, gridwidth=1, gridcolor='Black')\n",
-    "#fig.update_yaxes(showgrid=True, gridwidth=1, gridcolor='Black')\n",
     "fig.show()"
    ]
   },
@@ -208,14 +186,6 @@
     "#pip install -U kaleido\n",
     "#fig.write_image(\"fig1.png\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71b8059d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
