Include Defensive Universe in Normalizing data notebook

--- a/normalizing_data.ipynb
+++ b/normalizing_data.ipynb
@@ -93,7 +93,7 @@
    "id": "6f565722",
    "metadata": {},
    "source": [
-    "## Get Hedge Metrics and Normalized Hedge Metrics"
+    "## Get Raw Scores and Normalized Hedge Metrics"
    ]
   },
   {
@@ -103,9 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = summary.get_normalized_hedge_metrics(weekly_ret, equity_bmk=True, notional_weights = notional_weights, weighted = True)\n",
-    "df_norm = data['Normalized Data']\n",
-    "df_normal = df_norm.transpose()"
+    "data = summary.get_normalized_hedge_metrics(weekly_ret, equity_bmk=True, \n",
+    "                                            notional_weights = notional_weights, weighted = True)"
    ]
   },
   {
@@ -149,6 +148,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_norm = data['Normalized Data']\n",
+    "df_normal = df_norm.transpose()\n",
+    "\n",
     "#assign each strategy a symbol\n",
     "symbols = plots.get_symbols(df_normal, unique=True)\n",
     "color = plots.get_colors(df_normal, grey=False)\n",
@@ -175,17 +177,151 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac6ac2be",
+   "metadata": {},
+   "source": [
+    "# Ranked Stratagies with Defensive Universe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1afd9e16",
+   "metadata": {},
+   "source": [
+    "## Import Defensive Universe Returns Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ff2c543",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "949e9376",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install -U kaleido\n",
-    "#fig.write_image(\"fig1.png\")"
+    "import os\n",
+    "CWD = os.getcwd()\n",
+    "\n",
+    "RETURNS_DATA_FP = CWD +'\\\\EquityHedging\\\\data\\\\'\n",
+    "DEF_UNI_DATA = RETURNS_DATA_FP + 'ups_equity_hedge\\\\'\n",
+    "\n",
+    "def_uni=pd.read_excel(DEF_UNI_DATA+\"def_uni.xlsx\",\n",
+    "                                 sheet_name=\"Weekly\",\n",
+    "                                 index_col=0)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64add74a",
+   "metadata": {},
+   "source": [
+    "## Get Defensive Universe Raw Scores and Normalized Hedge Metrics "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf0da261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def_data = summary.get_normalized_hedge_metrics(def_uni, equity_bmk=False, notional_weights = [], weighted = False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76fb5175",
+   "metadata": {},
+   "source": [
+    "## Display Hedge Metrics and Normalized Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9381970b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def display_hedge_metrics_or_normal( stats = ['Hedge Metrics','Normalized Data']):\n",
+    "    if stats == 'Hedge Metrics':\n",
+    "        return fmt.format_hm_to_normalize(def_data[stats])    \n",
+    "    else:\n",
+    "        return fmt.format_normalized_data(def_data[stats])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df18b5ab",
+   "metadata": {},
+   "source": [
+    "## Merge Defensive Unverse Normalized Data and Strategies Normalized Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55a8a6f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df=dm.merge_data_frames(def_normal,df_normal)\n",
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc084234",
+   "metadata": {},
+   "source": [
+    "## Display Ranked Strategies vs Normalized Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "416331fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def_normal = def_data['Normalized Data']\n",
+    "def_normal = def_normal.transpose()\n",
+    "\n",
+    "def_symbols = plots.get_symbols(def_normal, unique=False)\n",
+    "new_symbols= dm.merge_data_frames( def_symbols, symbols)\n",
+    "def_color = plots.get_colors(def_normal, grey=True)\n",
+    "new_color= dm.merge_data_frames( def_color, color)\n",
+    "\n",
+    "#assign each strategy a symbol\n",
+    "index = list(merged_df.index)\n",
+    "fig = go.Figure()\n",
+    "#loops through eaach column and plots each metric for the given strategy\n",
+    "for col in merged_df.columns:\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=index,\n",
+    "        y=merged_df[col],\n",
+    "        marker=dict(size = 20, color = new_color[col]),\n",
+    "        marker_symbol = new_symbols[col],\n",
+    "        mode= \"markers\",\n",
+    "        name=col\n",
+    "        ))\n",
+    "fig.update_layout(title=\"\",\n",
+    "                xaxis_title=\"Hedge Metric\",\n",
+    "                yaxis_title=\"Higher the Better\",\n",
+    "                  plot_bgcolor='White')\n",
+    "fig.update_xaxes(showline=True, linewidth=2, linecolor='black', mirror=False)\n",
+    "fig.update_yaxes(showline=True, linewidth=2, linecolor='black', mirror=False)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fda5d66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
