updated normalizing script and jupyter notebook

--- a/normalizing_data.ipynb
+++ b/normalizing_data.ipynb
@@ -32,7 +32,6 @@
     "from EquityHedging.reporting import formatter as fmt, plots\n",
     "from EquityHedging.analytics import hedge_metrics as hm\n",
     "import pandas as pd\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "import plotly.graph_objects as go\n"
    ]
   },
@@ -61,7 +60,6 @@
    "outputs": [],
    "source": [
     "equity_bmk = 'SPTR'\n",
-    "weighted = [True, False]\n",
     "strat_drop_list = ['99%/90% Put Spread', 'Vortex']\n",
     "returns = dm.get_equity_hedge_returns(equity_bmk, strat_drop_list = strat_drop_list)\n",
     "weekly_ret=returns['Weekly'].copy()"
@@ -82,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#notional_weights = dm.get_notional_weights(returns['Monthly'])\n",
+    "#notional_weights = dm.get_notional_weights(returns['Weekly'])\n",
     "notional_weights = [19.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.25, 1.0]\n",
     "df_weights = util.get_df_weights(notional_weights, list(returns['Weekly'].columns))\n",
     "fmt.get_notional_styler(df_weights)"
@@ -103,8 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = summary.get_normalized_hedge_metrics(weekly_ret, equity_bmk=True, \n",
-    "                                            notional_weights = notional_weights, weighted = True)"
+    "hm_dict = summary.get_norm_hedge_metrics(weekly_ret, notional_weights, weighted=True)"
    ]
   },
   {
@@ -128,9 +125,9 @@
     "@interact\n",
     "def display_hedge_metrics_or_normal( stats = ['Hedge Metrics','Normalized Data']):\n",
     "    if stats == 'Hedge Metrics':\n",
-    "        return fmt.format_hm_to_normalize(data[stats])    \n",
+    "        return fmt.format_hm_to_normalize(hm_dict[stats])    \n",
     "    else:\n",
-    "        return fmt.format_normalized_data(data[stats])\n"
+    "        return fmt.format_normalized_data(hm_dict[stats])\n"
    ]
   },
   {
@@ -148,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_norm = data['Normalized Data']\n",
+    "df_norm = hm_dict['Normalized Data']\n",
     "df_normal = df_norm.transpose()\n",
     "\n",
     "#assign each strategy a symbol\n",
@@ -199,15 +196,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "CWD = os.getcwd()\n",
-    "\n",
-    "RETURNS_DATA_FP = CWD +'\\\\EquityHedging\\\\data\\\\'\n",
-    "DEF_UNI_DATA = RETURNS_DATA_FP + 'ups_equity_hedge\\\\'\n",
-    "\n",
-    "def_uni=pd.read_excel(DEF_UNI_DATA+\"def_uni.xlsx\",\n",
-    "                                 sheet_name=\"Weekly\",\n",
-    "                                 index_col=0)\n"
+    "def_uni = pd.read_excel(dm.EQUITY_HEDGE_DATA+'def_uni.xlsx',sheet_name='Weekly', index_col=0)\n",
+    "df_weighted_hedges = util.get_weighted_hedges(weekly_ret, notional_weights)\n",
+    "def_data = dm.merge_data_frames(df_weighted_hedges, def_uni)"
    ]
   },
   {
@@ -225,7 +216,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def_data = summary.get_normalized_hedge_metrics(def_uni, equity_bmk=False, notional_weights = [], weighted = False)\n"
+    "#def_dict = summary.get_norm_hedge_metrics(def_data)\n",
+    "def_dict = {}\n",
+    "for key in hm_dict:\n",
+    "    def_dict[key] = pd.read_excel(dm.EQUITY_HEDGE_DATA+'def_uni_hedge_metrics.xlsx', sheet_name=key, index_col=0)"
    ]
   },
   {
@@ -246,9 +240,9 @@
     "@interact\n",
     "def display_hedge_metrics_or_normal( stats = ['Hedge Metrics','Normalized Data']):\n",
     "    if stats == 'Hedge Metrics':\n",
-    "        return fmt.format_hm_to_normalize(def_data[stats])    \n",
+    "        return fmt.format_hm_to_normalize(def_dict[stats])    \n",
     "    else:\n",
-    "        return fmt.format_normalized_data(def_data[stats])"
+    "        return fmt.format_normalized_data(def_dict[stats])"
    ]
   },
   {
@@ -340,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
