Display Dref Uni using imported data

--- a/normalizing_data.ipynb
+++ b/normalizing_data.ipynb
@@ -198,7 +198,7 @@
    "source": [
     "def_uni = pd.read_excel(dm.EQUITY_HEDGE_DATA+'def_uni.xlsx',sheet_name='Weekly', index_col=0)\n",
     "df_weighted_hedges = util.get_weighted_hedges(weekly_ret, notional_weights)\n",
-    "def_data = dm.merge_data_frames(df_weighted_hedges, def_uni)"
+    "def_data = dm.merge_data_frames(def_uni, df_weighted_hedges)"
    ]
   },
   {
@@ -247,25 +247,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df18b5ab",
-   "metadata": {},
-   "source": [
-    "## Merge Defensive Unverse Normalized Data and Strategies Normalized Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55a8a6f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged_df=dm.merge_data_frames(def_normal,df_normal)\n",
-    "merged_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "bc084234",
    "metadata": {},
    "source": [
@@ -279,22 +260,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def_normal = def_data['Normalized Data']\n",
+    "#get normalized data\n",
+    "def_normal = def_dict['Normalized Data']\n",
     "def_normal = def_normal.transpose()\n",
     "\n",
-    "def_symbols = plots.get_symbols(def_normal, unique=False)\n",
+    "#rearrange columns so thatdefensive universe columns are before our strategies\n",
+    "def_universe_only = def_normal[def_uni.columns]\n",
+    "strategies_only = def_normal[df_normal.columns]\n",
+    "def_normal=dm.merge_data_frames(universe, portfolio)\n",
+    "\n",
+    "#get symbols for defensive universe\n",
+    "def_symbols = plots.get_symbols(def_universe_only, unique=False)\n",
+    "\n",
+    "#merge defensive universe symbols with strategy symbols from above\n",
     "new_symbols= dm.merge_data_frames( def_symbols, symbols)\n",
-    "def_color = plots.get_colors(def_normal, grey=True)\n",
+    "\n",
+    "#get colors for defensive universe as grey\n",
+    "def_color = plots.get_colors(def_universe_only, grey=True)\n",
+    "\n",
+    "#merge defensive universe colors with strategy colors\n",
     "new_color= dm.merge_data_frames( def_color, color)\n",
     "\n",
-    "#assign each strategy a symbol\n",
-    "index = list(merged_df.index)\n",
+    "\n",
+    "index = list(def_normal.index)\n",
     "fig = go.Figure()\n",
     "#loops through eaach column and plots each metric for the given strategy\n",
-    "for col in merged_df.columns:\n",
+    "for col in def_normal.columns:\n",
     "    fig.add_trace(go.Scatter(\n",
     "        x=index,\n",
-    "        y=merged_df[col],\n",
+    "        y=def_normal[col],\n",
     "        marker=dict(size = 20, color = new_color[col]),\n",
     "        marker_symbol = new_symbols[col],\n",
     "        mode= \"markers\",\n",
@@ -334,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
