--- a/normalizing_data.ipynb
+++ b/normalizing_data.ipynb
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hm_dict = summary.get_norm_hedge_metrics(weekly_ret, notional_weights, weighted=True)"
+    "hm_dict = summary.get_norm_hedge_metrics(weekly_ret, notional_weights, weighted=True,more_metrics=False)"
    ]
   },
   {
@@ -313,7 +313,8 @@
    "source": [
     "#create quartile_df\n",
     "quartile_df = def_dict['Normalized Data'].quantile([0,.25,.5,.75,1], axis=0)\n",
-    "quartile_df"
+    "quartile_df\n",
+    "strats_list=[]"
    ]
   },
   {
@@ -348,7 +349,7 @@
    "source": [
     "#get list of column inter quartile data\n",
     "col_iqr_list = quartile_df[col_name].tolist()\n",
-    "col_iqr_list[2]"
+    "col_iqr_list"
    ]
   },
   {
@@ -359,10 +360,22 @@
    "outputs": [],
    "source": [
     "#loop through list to get find strategies\n",
-    "strats_list=[]\n",
     "for quartile in col_iqr_list:\n",
     "    strat = col_series.index[col_series >= quartile][0]\n",
-    "    strats_list.append(strat)"
+    "    if strat not in strats_list:\n",
+    "        strats_list.append(strat)\n",
+    "strats_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03e8d1e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_list = list(df_weighted_hedges.columns) +strats_list\n",
+    "new_list"
    ]
   },
   {
@@ -372,7 +385,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "strats_list"
+    "def_hm = def_dict['Hedge Metrics'].copy()\n",
+    "def_n = def_dict['Normalized Data'].copy()"
    ]
   },
   {
@@ -400,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
