--- a/Equity-Hedge-Notebook.ipynb
+++ b/Equity-Hedge-Notebook.ipynb
@@ -226,7 +226,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -326,6 +326,7 @@
     "    df = summary.get_grouped_data(returns, group = group)\n",
     "    \n",
     "    for col in df.columns:\n",
+    "        df[col] *= 100\n",
     "        if not (col == equity_bmk or col ==strat):\n",
     "            df.drop([col], axis=1, inplace=True)\n",
     "    if group == \"Quintile\":\n",
@@ -334,6 +335,19 @@
     "        title = 'Decile Analysis'\n",
     "        \n",
     "    fig = px.bar(df,barmode='group',title = title)\n",
+    "    fig.update_layout(\n",
+    "        title = {'text':\"<b>{}</b>\".format(title),'y':0.95,'x':0.5,'xanchor': 'center','yanchor': 'top'},\n",
+    "        title_font_family = \"Calibri\",\n",
+    "        titlefont = {\"size\":24},\n",
+    "        xaxis = dict(tickfont = dict(size=12)),\n",
+    "        yaxis = dict(ticksuffix=\"%\"),\n",
+    "        legend_title=\"Strategies\"\n",
+    "        plot_bgcolor='White'\n",
+    "    )\n",
+    "    fig.update_xaxes(title_font_family = \"Calibri\",title_text = \"<b>SPTR Monthly Returns Ranking</b>\",\n",
+    "        title_font = {\"size\": 20},showline=True,linewidth=2,linecolor='black',mirror=False)\n",
+    "    fig.update_yaxes(title_font_family = \"Calibri\",title_text = \"<b></b>\",title_font = {\"size\": 20},\n",
+    "        showline=True,linewidth=2,linecolor='black',mirror=False)\n",
     "    fig.show()"
    ]
   },
@@ -376,7 +390,17 @@
     "    for col in df.columns:\n",
     "        if not (col == strat_1 or col ==strat_2):\n",
     "            df.drop([col], axis=1, inplace=True)\n",
-    "    fig = px.bar(df,barmode='group',title = \"Annual $ Returns\")\n",
+    "    fig = px.bar(df,barmode='group')\n",
+    "    fig.update_layout(\n",
+    "        title = {'text':\"<b>Annual $ Returns</b>\",'y':0.95,'x':0.5,'xanchor': 'center','yanchor': 'top'},\n",
+    "        title_font_family = \"Calibri\",\n",
+    "        titlefont = {\"size\":24},\n",
+    "        xaxis = dict(tickfont = dict(size=12)),\n",
+    "        legend_title=\"Strategies\"\n",
+    "    )\n",
+    "    fig.update_xaxes(title_font_family = \"Calibri\",title_text = \"<b>Year</b>\",\n",
+    "        title_font = {\"size\": 20})\n",
+    "    fig.update_yaxes(title_font_family = \"Calibri\",title_text = \"<b>Dollars</b>\",title_font = {\"size\": 20})\n",
     "    fig.show()"
    ]
   },
