--- a/Equity-Hedge-Notebook.ipynb
+++ b/Equity-Hedge-Notebook.ipynb
@@ -341,7 +341,7 @@
     "        titlefont = {\"size\":24},\n",
     "        xaxis = dict(tickfont = dict(size=12)),\n",
     "        yaxis = dict(ticksuffix=\"%\"),\n",
-    "        legend_title=\"Strategies\"\n",
+    "        legend_title=\"Strategies\",\n",
     "        plot_bgcolor='White'\n",
     "    )\n",
     "    fig.update_xaxes(title_font_family = \"Calibri\",title_text = \"<b>SPTR Monthly Returns Ranking</b>\",\n",
@@ -452,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
