--- a/powis_notebook.ipynb
+++ b/powis_notebook.ipynb
@@ -101,7 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hm_dict = summary.get_norm_hedge_metrics(weekly_ret, notional_weights, weighted=True,more_metrics=False)"
+    "more_metrics=True\n",
+    "hm_dict = summary.get_norm_hedge_metrics(weekly_ret, notional_weights, weighted=True,more_metrics=more_metrics)"
    ]
   },
   {
@@ -125,7 +126,7 @@
     "@interact\n",
     "def display_hedge_metrics_or_normal( stats = ['Hedge Metrics','Normalized Data']):\n",
     "    if stats == 'Hedge Metrics':\n",
-    "        return fmt.format_hm_to_normalize(hm_dict[stats])    \n",
+    "        return fmt.format_hm_to_normalize(hm_dict[stats],more_metrics)    \n",
     "    else:\n",
     "        return fmt.format_normalized_data(hm_dict[stats])\n"
    ]
@@ -136,17 +137,6 @@
    "metadata": {},
    "source": [
     "## Display Ranked Strategies vs Normalized Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "541ca7b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "symbols = plots.get_symbols(df_normal, unique=True)\n",
-    "symbols"
    ]
   },
   {
@@ -185,8 +175,8 @@
     "            },\n",
     "    title_font_family=\"Calibri\",\n",
     "    xaxis = dict(tickfont = dict(size=12)),\n",
-    "    legend_title=\"Strategies\",\n",
-    "\n",
+    "#     legend_title=\"Strategies\",\n",
+    "    showlegend=False,\n",
     "    plot_bgcolor='White'\n",
     "                 )\n",
     "\n",
@@ -222,7 +212,7 @@
    "outputs": [],
    "source": [
     "def_uni = pd.read_excel(dm.EQUITY_HEDGE_DATA+'def_uni.xlsx',sheet_name='Weekly', index_col=0)\n",
-    "def_uni.drop(\"VIX Calls\", inplace = True, axis = 1)\n",
+    "def_uni.drop([\"VIX Calls\",\"SG Inflation Proxy\"], inplace = True, axis = 1)\n",
     "df_weighted_hedges = util.get_weighted_hedges(weekly_ret, notional_weights)\n",
     "def_data = dm.merge_data_frames(def_uni, df_weighted_hedges)"
    ]
@@ -244,8 +234,10 @@
    "source": [
     "#def_dict = summary.get_norm_hedge_metrics(def_data)\n",
     "def_dict = {}\n",
+    "# file_name = 'def_uni_hedge_metrics.xlsx', more_metrics=False\n",
+    "file_name = 'def_uni_hedge_metrics_more.xlsx', more_metrics=True\n",
     "for key in hm_dict:\n",
-    "    def_dict[key] = pd.read_excel(dm.EQUITY_HEDGE_DATA+'def_uni_hedge_metrics.xlsx', sheet_name=key, index_col=0)"
+    "    def_dict[key] = pd.read_excel(dm.EQUITY_HEDGE_DATA+file_name, sheet_name=key, index_col=0)"
    ]
   },
   {
@@ -260,13 +252,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4d23b449",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "@interact\n",
     "def display_hedge_metrics_or_normal( stats = ['Hedge Metrics','Normalized Data']):\n",
     "    if stats == 'Hedge Metrics':\n",
-    "        return fmt.format_hm_to_normalize(def_dict[stats])    \n",
+    "        return fmt.format_hm_to_normalize(def_dict[stats], more_metrics)    \n",
     "    else:\n",
     "        return fmt.format_normalized_data(def_dict[stats])"
    ]
@@ -308,18 +302,32 @@
     "new_color= dm.merge_data_frames( def_color, color)\n",
     "\n",
     "\n",
-    "index = list(def_normal.index)\n",
+    "\n",
+    "index_2 = list(def_universe_only.index)\n",
     "fig = go.Figure()\n",
-    "#loops through eaach column and plots each metric for the given strategy\n",
-    "for col in def_normal.columns:\n",
+    "\n",
+    "for col in def_universe_only.columns:\n",
     "    fig.add_trace(go.Scatter(\n",
-    "        x=index,\n",
-    "        y=def_normal[col],\n",
-    "        marker=dict(size = 16, color = new_color[col]),\n",
+    "        x=index_2,\n",
+    "        y=def_universe_only[col],\n",
+    "        marker=dict(size = 10, color = def_color[col]),\n",
     "#         marker_symbol = new_symbols[col],\n",
     "        mode= \"markers\",\n",
     "        name=col\n",
     "        ))\n",
+    "    \n",
+    "index_1 = list(strategies_only.index)\n",
+    "#loops through eaach column and plots each metric for the given strategy\n",
+    "for col in strategies_only.columns:\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=index_1,\n",
+    "        y=strategies_only[col],\n",
+    "        marker=dict(size = 14, color = color[col]),\n",
+    "#          marker_symbol = symbols[col],\n",
+    "        mode= \"markers\",\n",
+    "        name=col\n",
+    "        ))\n",
+    "    \n",
     "fig.update_layout(\n",
     "    title={\n",
     "            'text': \"<b>UPSGT Hedging Framework</b>\",\n",
@@ -362,16 +370,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3af1f2df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "col_name = col_list[5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4f8bd74a",
    "metadata": {},
    "outputs": [],
@@ -391,63 +389,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1a0336f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0400a3b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e167421",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#get sorted series of column in normalized df\n",
-    "col_series = def_dict['Normalized Data'][col_name]\n",
-    "col_series = col_series.sort_values(ascending=True)\n",
-    "col_series"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da35f93d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#get list of column inter quartile data\n",
-    "col_iqr_list = quartile_df[col_name].tolist()\n",
-    "col_iqr_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57aae01a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#loop through list to get find strategies\n",
-    "for quartile in col_iqr_list:\n",
-    "    strat = col_series.index[col_series >= quartile][0]\n",
-    "    if strat not in strats_list:\n",
-    "        if strat not in df_weighted_hedges.columns:\n",
-    "            strats_list.append(strat)\n",
-    "strats_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "03e8d1e3",
    "metadata": {},
    "outputs": [],
@@ -455,16 +396,6 @@
     "new_list = strats_list+ list(df_weighted_hedges.columns)\n",
     "new_list.remove('SPTR')\n",
     "new_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27ac49aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(df_weighted_hedges.columns)[1:]"
    ]
   },
   {
@@ -524,14 +455,14 @@
     "fig.update_layout(\n",
     "    title={\n",
     "            'text': \"<b>UPSGT Hedging Framework</b>\",\n",
-    "            'size':24,\n",
     "            'y':0.9,\n",
     "            'x':0.5,\n",
     "            'xanchor': 'center',\n",
     "            'yanchor': 'top'\n",
     "            },\n",
     "    title_font_family=\"Calibri\",\n",
-    "    xaxis = dict(tickfont = dict(size=14)),\n",
+    "    titlefont = {\"size\":24},\n",
+    "        xaxis = dict(tickfont = dict(size=14)),\n",
     "#     legend_title=\"Strategies\",\n",
     "    showlegend=False,\n",
     "    plot_bgcolor='White'\n",
@@ -542,7 +473,7 @@
     "\n",
     "fig.update_yaxes(title_font_family = \"Calibri\",title_text = \"<b>Higher the Better</b>\",title_font = {\"size\": 20},\n",
     "                 showline=True,linewidth=2,linecolor='black',mirror=False)\n",
-    "fig.show()"
+    "fig.show()\n"
    ]
   },
   {
@@ -570,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
